add some info to mac readme

--- a/macos/README
+++ b/macos/README
@@ -11,3 +11,11 @@
 5. Add "Other > ProgramakV2"
 
 6. Switch keyboard to ProgramakV2 and restart Karabinier
+
+## Small difference
+
+"switch layer" key is in the same place but "backspace/delete" is moved one key to the right.
+
+## TODO
+
+Currently control key in not mapped so you may need to add "simple modification" and move it to another key
